--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	}
 	.description{
 		line-height: 20px;
-		margin: -20px 0 20px 0;
+		margin: 0 0 50px 0;
 	}
 	</style>
 </head>
@@ -67,7 +67,7 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/wwr.png" class="heroimage">
 <p class="description">White with Red <span class="smalltext">An interactive horror story based on the short horror story of the same name.</span></p>
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/nyc-map.png" class="heroimage">
-<p class="description">NYC Collisions 2014 <span class="smalltext">An interactive map of NYC showing vehicle collisions and the type of injuries in 2014.</span></p>
+<p class="description">NYC Collisions 2014 <span class="smalltext">An interactive map of NYC showing vehicle collisions and the type of civilians injured in 2014.</span></p>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
