--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 		padding-bottom: 3px;
 		transition: all 0.3s;
 	}
+
+	a > img{
+		border: none;
+	}
 	.smalltext{
 		font-size: 18px;
 		color: #d3d3d3;
