--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg">
 <a href="http://albertogui.com/projects/divpixels/" class="imglink"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/divpixel.png" class="heroimage"></a>
 <p class="description">divPixels <span class="smalltext">A free to use, browser-based pixel art tool for quickly developing pixel drawings.</span></p>
 <a href="http://albertogui.com/projects/whitewithred/" class="imglink"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/wwr.png" class="heroimage"></a>
-<p class="description">White with Red <span class="smalltext">An interactive horror story based on the short story of the same name.</span></p>
+<p class="description">White with Red <span class="smalltext">An interactive horror story based on the <a href="http://creepypasta.wikia.com/wiki/White_with_Red">short story of the same name</a>.</span></p>
 <a href="http://bl.ocks.org/AGdelaX/raw/5f3982201cfff21e631d" class="imglink"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/nyc-map.png" class="heroimage"></a>
 <p class="description">NYC Collisions 2014 <span class="smalltext">An interactive map of NYC showing vehicle collisions and the type of civilians injured in 2014.</span></p>
     <script>
