--- a/index.html
+++ b/index.html
@@ -4,74 +4,233 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <head>
-<title>Alberto Guillermo de la Cruz</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-<meta name="theme-color" content="#000000" />
+    <!DOCTYPE html>
+<html>
+<head>
+	<title>Alberto G. de la Cruz</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Anonymous+Pro' rel='stylesheet' type='text/css'>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"></script>
+	<script src="http://circletype.labwire.ca/js/circletype.js"></script>
+
 	<style type="text/css">
 	body{
-		max-width: 400px;
-		background-color: #212121;
-		color: white;
-		font-family: 'Inconsolata';
+		background-color: white;
+		height: 100%;
 		width: 100%;
-		margin: auto;
-		padding-top: 100px;
-		line-height: 40px;
-	}
-	img{
-		width: 80px;
-		left: 50%;
-		position: relative;
-		transform: translateX(-50%);
-	}
-	p{
-		font-size: 28px;
-		padding: 0 10px 0 10px;
-	}
-	a{
-		color: white;
-		text-decoration: none;
-		border-bottom: 2px solid white;
-	}
-	a:hover{
-		padding-bottom: 3px;
-		transition: all 0.3s;
+		position: absolute;
+		overflow-x: hidden;
+		font-family: 'Helvetica Neue', sans-serif;
 	}
 
-	.imglink{
-		border: none;
+	.container{
+		display: flex;
+		display: -webkit-flex;
+		justify-content: center;
+		-webkit-justify-content: center;
+		align-items: center;
+		-webkit-align-items: center;
+		padding: 0;
+		position: absolute;
+		width: 100%;
+		height: 100%;
 	}
-	.smalltext{
-		font-size: 18px;
-		color: #d3d3d3;
+	#content {
+    position:relative; 
+    top:105%; 
+    max-width: 750px;
+    margin: auto;
+    font-size: 1.5em;
+    padding: 0 15px 30px 15px;
+    line-height: 1.7em;
 	}
-	.heroimage{
-		max-width: 100%;
-		max-height: 100%;
-		width: auto;
-		height: auto;
+	h1{
+		font-size: 11.5vmin;
+		font-weight: 500;
+		-webkit-animation-name: turn;
+		-webkit-animation-direction: reverse;
+		-webkit-animation-duration: 30s;
+		-webkit-animation-iteration-count: infinite;
+		-webkit-animation-timing-function: linear;
+		animation-name: turn;
+		animation-direction: reverse;
+		animation-duration: 30s;
+		animation-iteration-count: infinite;
+		animation-timing-function: linear;
+		-o-animation-name: turn;
+		-o-animation-direction: reverse;
+		-o-animation-duration: 30s;
+		-o-animation-iteration-count: infinite;
+		-o-animation-timing-function: linear;
 	}
-	.description{
-		line-height: 20px;
-		margin: 0 0 50px 0;
+
+	h2{
+		color: #212121;
+		font-size: 5vmin;
+		font-weight: 400;
+		-webkit-animation-name: turn;
+		-webkit-animation-duration: 60s;
+		-webkit-animation-iteration-count: infinite;
+		-webkit-animation-timing-function: linear;
+		animation-name: turn;
+		animation-duration: 60s;
+		animation-iteration-count: infinite;
+		animation-timing-function: linear;
+	}
+
+	h3{
+		font-weight: 400;
+		padding-top: 20px;
+	}
+
+	@-webkit-keyframes turn{
+		0%{-webkit-transform: rotate(0);}
+		100%{-webkit-transform: rotate(360deg);}
+	}
+
+	@keyframes turn{
+		0%{transform: rotate(0);}
+		100%{transform: rotate(360deg);}
+	}
+
+	a{
+		text-decoration: none;
+		color: #212121;
+    text-transform: uppercase;
+	}
+	a:hover{
+		color: gray;
+	}
+	.contentlinks{
+		text-transform: none;
+		padding-bottom: 1px;
+		border-bottom: 2px solid black;
+	}
+	.contentlinks:hover{
+		padding-bottom: 4px;
+		transition: all 0.3s;
+		color: black;
+	}
+	#face{
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		max-width: 25vmin;
+		transform: translate(-45%, -50%);
+		-webkit-transform: translate(-45%, -50%);
+		-moz-transform: translate(-45%, -50%);
+		-ms-transform: translate(-45%, -50%);
+		-o-transform: translate(-45%, -50%);
+	}
+	#scroll-down{
+		position: absolute;
+		top: 85%;
+		font-size: 7vmin;
+		cursor: pointer;
+	}
+	#scroll-down:hover{
+		color: gray;
+	}
+
+	#wip {
+		width: 60px;
+		left: 45%;
+		position: relative;
+	}
+
+	@media (min-width: 700px){
+		#scroll-down{
+			left: 2vmin;
+			top: 83%;
+		}
 	}
 	</style>
 </head>
-<img src="	
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg">
-<p>Hello! My name's Alberto Guillermo de la Cruz. I'm a designer from Puerto Rico now living in NYC. I'm also the creator of <a href="http://playarithmatic.com">Arithmatic</a>. If you ever want to chat you can reach me by <a href="mailto:agdelax@gmail.com">e-mail</a> and <a href="http://twitter.com/agdelax">Twitter</a>.</p>
+<body>
+	<div class="container">
+		<img id= "face" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg">
+    <h1 id="name">Designer &mdash; Alberto Guillermo de la Cruz &mdash;&nbsp;</h1>
+      <h2 id="links">Dribbble &mdash; Twitter &mdash; Github &mdash; LinkedIn &mdash; Medium &mdash; Email &mdash;&nbsp;</h2>
+      <a href=""><p id="scroll-down">&darr;</p></a>
+	</div>
+	<div id="content">
+		<p>Hello! I'm a designer and web developer from Puerto Rico now living in NYC. I've worked on design at places like <a class="contentlinks" href="http://artbinder.com">ArtBinder</a> and <a class="contentlinks" href="http://aliceapp.com">Alice</a>, and have recently launched an <a class="contentlinks" href="http://playarithmatic.com">app of my own</a>. My background lies in UI/UX design, although I also have experience with front-end development and illustration. Outside of work I like comics, video games and good beer. <a class="contentlinks" href="mailto:agdelax@gmail.com">Hit me up</a> if you ever need a designer.</p>
+		<h3>Projects</h3>
+		<p><a class="contentlinks" href="http://playarithmatic.com">Arithmatic</a>&mdash;An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</p>
+		<p><a class="contentlinks" href="http://albertogui.com/projects/divpixels/">divPixels</a>&mdash;A free to use, browser-based pixel art tool for quickly developing pixel drawings.</p>
+		<p><a class="contentlinks" href="http://albertogui.com/projects/whitewithred/">White with Red</a>&mdash;An interactive horror story based on the short story of the same name.</p>
 
-<p>Projects <span class="smalltext"><a href="http://bl.ocks.org/AGdelaX">Check out my gists</a></span></p>
-<a href="http://playarithmatic.com" class="imglink"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic.png" class="heroimage"></a>
-<p class="description">Arithmatic <span class="smalltext">An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</span></p>
-<a href="http://albertogui.com/projects/divpixels/" class="imglink"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/divpixel.png" class="heroimage"></a>
-<p class="description">divPixels <span class="smalltext">A free to use, browser-based pixel art tool for quickly developing pixel drawings.</span></p>
-<a href="http://albertogui.com/projects/whitewithred/" class="imglink"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/wwr.png" class="heroimage"></a>
-<p class="description">White with Red <span class="smalltext">An interactive horror story based on the <a href="http://creepypasta.wikia.com/wiki/White_with_Red">short story of the same name</a>.</span></p>
-<a href="http://bl.ocks.org/AGdelaX/raw/5f3982201cfff21e631d" class="imglink"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/nyc-map.png" class="heroimage"></a>
-<p class="description">NYC Collisions 2014 <span class="smalltext">An interactive map of NYC showing vehicle collisions and the type of civilians injured in 2014.</span></p>
+		<img id="wip" src="https://camo.githubusercontent.com/4a7cf94aedbd23c13cc2d75fdc3b2af5c816c208/687474703a2f2f7374617469632e646967672e636f6d2f7374617469632f696d616765732f6469676765722e676966">
+	</div>
+
+	<script type="text/javascript">
+		$('h1').circleType();
+		$('h2').circleType();
+
+    // When changing the rotating navbar remember to change both the for position and the insertAfter
+
+		// FOR DRIBBBLE
+		var aboutLink = document.createElement('a');
+		aboutLink.href="https://dribbble.com/albertosoft";
+		for(i=1; i<9; i++){
+			var linkDiv=document.getElementsByTagName('h2')[0].getElementsByClassName("char"+i)[0];
+			aboutLink.appendChild(linkDiv);
+		};
+		document.getElementById('links').appendChild(aboutLink);
+
+		// FOR TWITTER
+		var projectsLink = document.createElement('a');
+		projectsLink.href="http://twitter.com/agdelax";
+		for(i=11; i<19; i++){
+			var linkDiv=document.getElementsByTagName('h2')[0].getElementsByClassName("char"+i)[0];
+			projectsLink.appendChild(linkDiv);
+		};
+		$(projectsLink).insertAfter("h2 .char10");
+
+		// FOR GITHUB
+		var resumeLink = document.createElement('a');
+		resumeLink.href="http://github.com/agdelax";
+		for(i=21; i<28; i++){
+			var linkDiv=document.getElementsByTagName('h2')[0].getElementsByClassName("char"+i)[0];
+			resumeLink.appendChild(linkDiv);
+		};
+		$(resumeLink).insertAfter("h2 .char20");
+
+		
+		// FOR LINKEDIN
+		var twitterLink = document.createElement('a');
+		twitterLink.href="http://linkedin.com/in/agdelax";
+		for(i=30; i<39; i++){
+			var linkDiv=document.getElementsByTagName('h2')[0].getElementsByClassName("char"+i)[0];
+			twitterLink.appendChild(linkDiv);
+		};
+		$(twitterLink).insertAfter("h2 .char29");
+
+		
+		// FOR MEDIUM
+		var githubLink = document.createElement('a');
+		githubLink.href="https://medium.com/@albertodelacruz";
+		for(i=41; i<48; i++){
+			var linkDiv=document.getElementsByTagName('h2')[0].getElementsByClassName("char"+i)[0];
+			githubLink.appendChild(linkDiv);
+		};
+		$(githubLink).insertAfter("h2 .char40");
+
+		
+		// FOR EMAIL
+		var linkedinLink = document.createElement('a');
+		linkedinLink.href="mailto:agdelax@gmail.com";
+		for(i=50; i<57; i++){
+			var linkDiv=document.getElementsByTagName('h2')[0].getElementsByClassName("char"+i)[0];
+			linkedinLink.appendChild(linkDiv);
+		};
+		$(linkedinLink).insertAfter("h2 .char49");
+
+	</script>
+</body>
+</html>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
