--- a/index.html
+++ b/index.html
@@ -26,12 +26,7 @@
 	}
 
 	.container{
-		display: flex;
-		display: -webkit-flex;
-		justify-content: center;
-		-webkit-justify-content: center;
-		align-items: center;
-		-webkit-align-items: center;
+		top: 50%;
 		padding: 0;
 		position: absolute;
 		width: 100%;
