--- a/projects/divpixels/index.html
+++ b/projects/divpixels/index.html
@@ -60,10 +60,10 @@
 		left: 50%;
 		padding: 0;
 		position: absolute;
-		width: 100%;
-		height: 100%;
-		margin-top: -50%;
-		margin-left: -50%;
+		width: 350px;
+		height: 400px;
+		margin-top: -200px;
+		margin-left: -175px;
 	}
 	#close{
 		height: 50px;
