--- a/projects/divpixels/index.html
+++ b/projects/divpixels/index.html
@@ -141,7 +141,7 @@
 		var grid = width*height;
 		console.log(grid);
 
-		var currentColor = "#ffcc00";
+		var currentColor = "#ff6016";
 
 		function update(picker) {
     		currentColor = picker.toHEXString();
@@ -158,7 +158,7 @@
 			var square = document.createElement('div');
 			square.style.height = "15px";
 			square.style.width = "15px";
-			square.style.border = "1px solid #ffcc00";
+			square.style.border = "1px solid #ff6016";
 			square.style.margin = "0";
 			square.style.padding = "0";
 			square.style.float = "left";
