--- a/projects/divpixels/index.html
+++ b/projects/divpixels/index.html
@@ -116,7 +116,7 @@
 		<div id="menucontent">
 			<h1>divPixels</h1>
 			<h2>A no-fuss HTML pixel editor</h2>
-			<input class="jscolor {onFineChange:'update(this)',closable:true,closeText:'Close me!'}" value="ffcc00">
+			<input class="jscolor {onFineChange:'update(this)',closable:true,closeText:'Close me!'}" value="ff6016">
 			<div id="checkdiv">
 				<input type="checkbox" id="myCheck" checked><p id='gridlabel'>Gridlines</p>
 			</div>
