--- a/projects/divpixels/index.html
+++ b/projects/divpixels/index.html
@@ -25,7 +25,7 @@
 	}
 
 	.gridblock:hover{
-		background-color: #ffcc00;
+		background-color: #ff6016;
 	}
 	h1{
 		font-family: 'Press Start 2P';
@@ -49,7 +49,7 @@
 		width: 100%;
 		height: 100%;
 		position: absolute;
-		background-color: #ffcc00;
+		background-color: #ff6016;
 		margin: 0 0 0 -5px;
 		color: white;
 		text-align: center;
@@ -81,7 +81,7 @@
 		position: fixed;
 		left: 5px;
 		top: 0;
-		background-color: #ffcc00;
+		background-color: #ff6016;
 		color: white;
 		font-size: 40px;
 		text-align: center;
