--- a/projects/divpixels/index.html
+++ b/projects/divpixels/index.html
@@ -45,13 +45,14 @@
 		text-align: center;
 	}
 	#screen{
+		outline-color: white;
 		z-index: 100;
 		width: 100%;
 		height: 100%;
 		position: absolute;
 		background-color: #ff6016;
 		margin: 0 0 0 -5px;
-		color: white;
+		color: black;
 		text-align: center;
 		display: none;
 	}
