--- a/projects/divpixels/index.html
+++ b/projects/divpixels/index.html
@@ -45,7 +45,11 @@
 		text-align: center;
 	}
 	#screen{
-		outline-color: white;
+		text-shadow:
+    -1px -1px 0 #fff,
+    1px -1px 0 #fff,
+    -1px 1px 0 #fff,
+    1px 1px 0 #fff;
 		z-index: 100;
 		width: 100%;
 		height: 100%;
