--- a/projects/divpixels/index.html
+++ b/projects/divpixels/index.html
@@ -165,6 +165,11 @@
 					$( this ).css( "background-color", currentColor );
 				}
 			};
+			square.touchenter=function(){
+				if(mouseDown==true){
+					$( this ).css( "background-color", currentColor );
+				}
+			};
 			document.getElementsByTagName('body')[0].appendChild(square);
 			};
 
