--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     padding: 0 15px 30px 15px;
     line-height: 1.7em;
 	}
-	h1{
+
+	#name{
 		font-size: 11.5vmin;
 		font-weight: 500;
 		-webkit-animation-name: turn;
@@ -66,7 +67,7 @@
 		-o-animation-timing-function: linear;
 	}
 
-	h2{
+	#links{
 		color: #212121;
 		font-size: 5vmin;
 		font-weight: 400;
@@ -78,6 +79,28 @@
 		animation-duration: 60s;
 		animation-iteration-count: infinite;
 		animation-timing-function: linear;
+	}
+
+	#linksdown{
+		text-transform: uppercase;
+		position: fixed;
+		top: 0.5em;
+		right: 1em;
+		font-size: 1.5em;
+		z-index: 22;
+		max-width: 600px;
+		display: inline;
+		}
+
+	#navbar{
+		height: 6.5em;
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		background-color: white;
+		z-index: 20;
+		border-bottom: solid black 2px;
 	}
 
 	h3{
@@ -124,6 +147,13 @@
 		-ms-transform: translate(-45%, -50%);
 		-o-transform: translate(-45%, -50%);
 	}
+	#facedown{
+		top: 1em;
+		left: 1.3em;
+		position: fixed;
+		max-width: 3em;
+		z-index: 21;
+	}
 	#scroll-down{
 		position: absolute;
 		top: 85%;
@@ -132,12 +162,6 @@
 	}
 	#scroll-down:hover{
 		color: gray;
-	}
-
-	#wip {
-		width: 60px;
-		left: 45%;
-		position: relative;
 	}
 
 	@media (min-width: 700px){
@@ -150,23 +174,30 @@
 </head>
 <body>
 	<div class="container">
+		<div id="navbar"></div>
 		<img id= "face" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg">
     <h1 id="name">Designer &mdash; Alberto Guillermo de la Cruz &mdash;&nbsp;</h1>
       <h2 id="links">Dribbble &mdash; Twitter &mdash; Github &mdash; LinkedIn &mdash; Medium &mdash; Email &mdash;&nbsp;</h2>
+
+      <p id="linksdown"><a class="contentlinks" href="https://dribbble.com/albertosoft">Dribbble</a>&mdash;<a class="contentlinks" href="http://twitter.com/agdelax">Twitter</a>&mdash;<a class="contentlinks" href="http://github.com/agdelax">Github</a>&mdash;<a class="contentlinks" href="http://linkedin.com/in/agdelax">LinkedIn</a>&mdash;<a class="contentlinks" href="https://medium.com/@albertodelacruz">Medium</a>&mdash;<a class="contentlinks" href="mailto:agdelax@gmail.com">Email</a></p>
+
       <a href=""><p id="scroll-down">&darr;</p></a>
 	</div>
 	<div id="content">
-		<p>Hello! I'm a designer and web developer from Puerto Rico now living in NYC. I've worked on design at places like <a class="contentlinks" href="http://artbinder.com">ArtBinder</a> and <a class="contentlinks" href="http://aliceapp.com">Alice</a>, and have recently launched an <a class="contentlinks" href="http://playarithmatic.com">app of my own</a>. My background lies in UI/UX design, although I also have experience with front-end development and illustration. Outside of work I like comics, video games and good beer. <a class="contentlinks" href="mailto:agdelax@gmail.com">Hit me up</a> if you ever need a designer.</p>
+		<p>Hello! I'm a designer and web developer from Puerto Rico now living in NYC. I've worked on design at places like <a class="contentlinks" href="http://artbinder.com">ArtBinder</a> and <a class="contentlinks" href="http://aliceapp.com">Alice</a>, and have recently launched an <a class="contentlinks" href="http://playarithmatic.com">app of my own</a>. My background is in UI/UX design, although I also have experience with illustration and front-end development. Outside of work I like comics, video games and good beer. <a class="contentlinks" href="mailto:agdelax@gmail.com">Hit me up</a> if you ever need a designer.</p>
 		<h3>Projects</h3>
 		<p><a class="contentlinks" href="http://playarithmatic.com">Arithmatic</a>&mdash;An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</p>
 		<p><a class="contentlinks" href="http://albertogui.com/projects/divpixels/">divPixels</a>&mdash;A free to use, browser-based pixel art tool for quickly developing pixel drawings.</p>
-		<p><a class="contentlinks" href="http://albertogui.com/projects/whitewithred/">White with Red</a>&mdash;An interactive horror story based on the short story of the same name.</p>
+		<p><a class="contentlinks" href="http://albertogui.com/projects/whitewithred/">White with Red</a>&mdash;A series of illustrations and web animations based on the short horror story of the same name.</p>
 
 	</div>
 
 	<script type="text/javascript">
-		$('h1').circleType();
-		$('h2').circleType();
+		$('#name').circleType();
+		$('#links').circleType();
+
+		$('#linksdown').hide();
+		$('#navbar').hide();
 
     // When changing the rotating navbar remember to change both the for position and the insertAfter
 
@@ -226,6 +257,30 @@
 			linkedinLink.appendChild(linkDiv);
 		};
 		$(linkedinLink).insertAfter("h2 .char49");
+
+		//________________________________________
+
+		$(window).scroll(function () { 
+  		if ($(window).scrollTop() > $('body').height() * 0.65) {
+  			//When scrolling down
+  			$('#face').attr('id', 'facedown');
+  			$('#links').hide();
+  			$('#name').hide();
+  			$('#linksdown').show();
+  			$('#navbar').show();
+  		} else if ($(window).scrollTop() < $('body').height() * 0.65){
+  			//When scrolling back up
+  			$('#facedown').attr('id', 'face');
+  			$('#links').show();
+  			$('#name').show();
+  			$('#linksdown').hide();
+  			$('#navbar').hide();
+  		}
+		});
+
+		if(navigator.userAgent.match(/iPhone/i)) {
+   		document.getElementById('links').style.fontSize = "4vmin";
+		}
 
 	</script>
 </body>
