--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       <a href=""><p id="scroll-down">&darr;</p></a>
 	</div>
 	<div id="content">
-		<p>Hello! I'm a designer and web developer from Puerto Rico now living in NYC. I've worked on design at places like <a class="contentlinks" href="http://artbinder.com">ArtBinder</a> and <a class="contentlinks" href="http://aliceapp.com">Alice</a>, and have recently launched an <a class="contentlinks" href="http://playarithmatic.com">app of my own</a>. My background is in UI/UX design, although I also have experience with illustration and front-end development. Outside of work I like comics, video games and good beer. <a class="contentlinks" href="mailto:agdelax@gmail.com">Hit me up</a> if you ever need a designer.</p>
+		<p>Hello! I'm a designer and web developer from Puerto Rico now living in NYC. I've worked on design at places like <a class="contentlinks" href="http://artbinder.com">ArtBinder</a> and <a class="contentlinks" href="http://aliceapp.com">Alice</a>, and have recently launched an <a class="contentlinks" href="http://playarithmatic.com">app of my own</a>. I am skilled in UI/UX design, graphic design, illustration and front-end development. Outside of work I like comics, video games and good beer. <a class="contentlinks" href="mailto:agdelax@gmail.com">Hit me up</a> if you ever need a designer.</p>
 		<h3>Projects</h3>
 		<p><a class="contentlinks" href="http://playarithmatic.com">Arithmatic</a>&mdash;An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</p>
 		<p><a class="contentlinks" href="http://albertogui.com/projects/divpixels/">divPixels</a>&mdash;A free to use, browser-based pixel art tool for quickly developing pixel drawings.</p>
