--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <head>
 	<title>Alberto G. de la Cruz</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="shortcut icon" href="https://s3-us-west-2.amazonaws.com/wip-bucket/github/favicon.ico" type='image/x-icon'/>
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Anonymous+Pro' rel='stylesheet' type='text/css'>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
