--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -4,8 +4,75 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h2><a href="http://albertogui.com">Alberto Guillermo de la Cruz</a></h2>
-<h2>Arroz Blanco (T-Shirt and Sticker Design, Branding)</h2>
+    <head>
+  <style type="text/css">
+    .img-container{
+      max-width: 750px;
+    }
+    #linksdown{
+    position: fixed;
+    top: 0.5em;
+    right: 1em;
+    font-size: 1.5em;
+    z-index: 22;
+    display: inline;
+    max-width: 700px;
+    }
+
+  #navbar{
+    height: 6.5em;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    z-index: 20;
+    border-bottom: solid black 2px;
+  }
+  #facedown{
+    top: 1em;
+    left: 1.3em;
+    position: fixed;
+    max-width: 3em;
+    z-index: 21;
+  }
+
+  @media (max-width: 700px){
+    #menubutton{
+      display: inline-block;
+      float: right;
+      cursor: pointer;
+    }
+    .nav{
+      display: none;
+      text-align: right;
+    }
+    .dash{
+      display: none;
+    }
+
+  }
+  </style>
+</head>
+<body>
+      <div id="navbar"></div>
+      <img id= "facedown" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg">
+      <div id="linksdown">
+        <p id="menubutton"><a class="contentlinks">Menu</a></p>
+        <div id="navbox">
+        <p class="nav"><a class ="contentlinks" href="https://dribbble.com/albertosoft">Dribbble</a></p>
+        <p class="dash">&mdash;</p>
+        <p class="nav"><a class ="contentlinks" href="http://twitter.com/agdelax">Twitter</a></p>
+        <p class="dash">&mdash;</p>
+        <p class="nav"><a class ="contentlinks" href="http://github.com/agdelax">Github</a></p>
+        <p class="dash">&mdash;</p>
+        <p class="nav"><a class ="contentlinks" href="http://linkedin.com/in/agdelax">LinkedIn</a></p>
+        <p class="dash">&mdash;</p>
+        <p class="nav"><a class ="contentlinks" href="https://medium.com/@albertodelacruz">Medium</a></p>
+        <p class="dash">&mdash;</p>
+        <p class="nav"><a class ="contentlinks" href="mailto:agdelax@gmail.com">Email</a></li>
+        </div>
+      </div>
 <div class="img-container">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-logo.jpg">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arigatas.png">
@@ -29,9 +96,32 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pistola-sticke
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-postcard.png">
 </div>
 
-<p>Last year, out of curiosity I decided to check out the book <a href="http://www.amazon.com/Launch-Kick-Ass-T-Shirt-Brand-ebook/dp/B005D9J252">Launch a Kickass T-Shirt Brand</a>. Inspired by other hispanic T-shirt brands like <a href="http://shop.tripleta.com/">Tripleta</a> and <a href="http://mangobajito.com/">MangoBajito</a>, I decided to give it a shot and that summer I set up a booth in <a href="http://www.prcomiccon.com/">Puerto Rico Comic Con</a> selling t-shirts and stickers I designed.</p>
+<script type="text/javascript">
+  var clicked = false;
+    document.getElementById('menubutton').onclick = function(){
+      if (clicked === false) {
+        clicked=true;
+        $('.nav').css("display", "block");
+        $('#navbar').height("25.5em");
+      } else {
+        clicked=false;
+        $('.nav').hide();
+        $('#navbar').height("6.5em");
+      }
+    }
 
-<p>The designs were inspired by a mix of Puerto Rican and Japanese culture, hence the name Arroz Blanco (since both Japanese and Puerto Rican cuisine have a heavy emphasis on white rice). I also set up a basic website and social media campaign promoting the products. My expectations with the brand weren’t in line with the reality. I wanted to be completely sold out of my product by the end of Comic Con, instead I was able to sell a quarter of my merchandise. I learned from the experience that I didn’t want to get into the t-shirt business, however it was because of this project I first started becoming interested in web design, collaborating with a programmer friend of mine in making the website. In designing the website I started reading up on responsive web design and usability and in the process became interested in user experience.</p>
+    $(window).on('resize', function(event){
+
+      var windowWidth = $(window).width();
+      if(windowWidth > 701){
+        $('.nav').css("display", "inline-block");
+        $('#navbar').height("6.5em");
+      } else if (windowWidth < 701){
+        $('.nav').hide();
+      }
+    });
+</script>
+</body>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
