--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -6,6 +6,14 @@
   <body>
     <head>
   <style type="text/css">
+  body{
+    background-color: white;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    overflow-x: hidden;
+    font-family: 'Helvetica Neue', sans-serif;
+  }
     .img-container{
       max-width: 750px;
     }
