--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -16,6 +16,10 @@
   }
     .img-container{
       max-width: 750px;
+      margin: auto;
+      font-size: 1.5em;
+      padding: 0 15px 30px 15px;
+      line-height: 1.7em;
     }
     img{
       width: 100%;
