--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -20,6 +20,7 @@
       font-size: 1.5em;
       padding: 0 15px 30px 15px;
       line-height: 1.7em;
+      top: 7em;
     }
     img{
       width: 100%;
