--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -155,6 +155,8 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pistola-sticke
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-bizcard2.png">
 <img src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-postcard.png">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/sticker.jpg">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/booth.jpg">
 </div>
 
 <script type="text/javascript">
