--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 		<p><a class="contentlinks" href="http://playarithmatic.com">Arithmatic</a>&mdash;An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</p>
 		<p><a class="contentlinks" href="http://albertogui.com/projects/divpixels/">divPixels</a>&mdash;A free to use, browser-based pixel art tool for quickly developing pixel drawings.</p>
 		<p><a class="contentlinks" href="http://albertogui.com/projects/whitewithred/">White with Red</a>&mdash;A series of illustrations and web animations based on the short horror story of the same name.</p>
-		<p><a class="contentlinks" href="http://albertogui.com/projects/arroz-blanco/">Arroz Blanco</a>&mdash;A t-shirt and sticker line I developed and sold in Puerto Rico Comic Con. The designs were inspired by geeky imagery and Puerto Rican culture.</p>
+		<p><a class="contentlinks" href="http://albertogui.com/projects/arroz-blanco/">Arroz Blanco</a>&mdash;A t-shirt and sticker line I developed and sold in Puerto Rico Comic Con. The brand is a blend of otaku and Puerto Rican culture.</p>
 
 	</div>
 
