--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/alice-crm.gif" class="image-responsive"> -->
 		<p><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A CRM for hotel concierge as a part of Alice's backend hotel management solution.</p>
 
-		<h3>Code Experiments &nbsp;<span id="gists"><a class="contentlinks" href="http://bl.ocks.org/AGdelaX">Check out my gists!</a></span></h3>
+		<h3>Coded Work &nbsp;<span id="gists"><a class="contentlinks" href="http://bl.ocks.org/AGdelaX">Check out my gists!</a></span></h3>
 
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/divpixels.gif" class="image-responsive"> -->
 		<p><a class="contentlinks" href="/projects/divpixels/">divPixels</a>&mdash;A free to use, browser-based pixel art tool for quickly developing pixel drawings.</p>
