--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -139,7 +139,7 @@
       </div>
 <div class="img-container">
 <h3>Arroz Blanco</h3>
-<p>Last year, out of curiosity I decided to check out the book <a class="contentlinks" href="https://www.amazon.com/Launch-Kick-Ass-T-Shirt-Brand-Magazine/dp/B005KSRC44">Launch a Kickass T-Shirt Brand</a>. Inspired by other hispanic T-shirt brands like <a class="contentlinks" href="http://tripleta.com/">Tripleta</a> and <a class="contentlinks" href="https://www.facebook.com/mangobajito/">MangoBajito</a>, I decided to give it a shot and that summer I set up a booth in Puerto Rico Comic Con selling t-shirts and stickers I designed. The product line consisted of 6 t-shirts and 3 stickers.</p>
+<!-- <p>Last year, out of curiosity I decided to check out the book <a class="contentlinks" href="https://www.amazon.com/Launch-Kick-Ass-T-Shirt-Brand-Magazine/dp/B005KSRC44">Launch a Kickass T-Shirt Brand</a>. Inspired by other hispanic T-shirt brands like <a class="contentlinks" href="http://tripleta.com/">Tripleta</a> and <a class="contentlinks" href="https://www.facebook.com/mangobajito/">MangoBajito</a>, I decided to give it a shot and that summer I set up a booth in Puerto Rico Comic Con selling t-shirts and stickers I designed. The product line consisted of 6 t-shirts and 3 stickers.</p> -->
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-logo.jpg" style="max-width: 500px;">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arigatas.png" style="max-width: 500px;">
 <img src="
@@ -160,7 +160,7 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pistola-sticke
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-bizcard2.png" style="max-width: 500px;">
 <img src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-postcard.png" style="max-width: 500px;">
-<p>The designs were inspired by a mix of Puerto Rican and Japanese culture, hence the name Arroz Blanco&mdash;since both Japanese and Puerto Rican cuisine have a heavy emphasis on white rice. I also set up a basic website and social media campaign promoting the products.</p>
+<!-- <p>The designs were inspired by a mix of Puerto Rican and Japanese culture, hence the name Arroz Blanco&mdash;since both Japanese and Puerto Rican cuisine have a heavy emphasis on white rice. I also set up a basic website and social media campaign promoting the products.</p> -->
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/sticker.jpg" style="max-width: 500px;">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/booth.jpg" style="max-width: 500px;">
 </div>
